--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
 
 
 
-
       <!--
         - #ABOUT
       -->
@@ -209,8 +208,8 @@
 
         <section class="about-text">
             <p>
-             I'm seeking a PhD degree in the area of Electrical and Computer Engineering. 
-             For a long-term goal, I aim to become involved in innovative work in academia or engage in a professional 
+             I'm seeking a PhD degree in the area of Electrical and Computer Engineering.
+             For a long-term goal, I aim to become involved in innovative work in academia or engage in a professional
              job related to electronic engineering in industry after graduation.
             </p>
 
@@ -492,6 +491,182 @@
               <a href="#">
                 <img src="./assets/images/logo-6-color.png" alt="client logo">
               </a>
+            </li>
+
+          </ul>
+
+        </section>
+
+      </article>
+
+
+      <!--
+        - #RESUME
+      -->
+
+      <article class="resume" data-page="resume">
+
+        <header>
+          <h2 class="h2 article-title">Resume</h2>
+        </header>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Education</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Shandong University</h4>
+
+              <span>2020 — 2024</span>
+              <span>Bachelor's degree Automation.</span>
+
+              <p class="timeline-text">
+                  Core Courses: Control theory, Power Electronic Technology, Electric Circuit,
+                  Basics of Analog Electronic Technology, Functions of Complex Variables and Laplace Transformation
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+                <h4 class="h4 timeline-item-title">Johns Hopkins University</h4>
+
+                <span>2024 — 2025</span>
+                <span>Master in Systems Engineering.</span>
+
+                <p class="timeline-text">
+                    Core Courses: System Dynamics, Applied Statistics and Data Analysis, Nonlinear Optimization
+                </p>
+
+            </li>
+
+
+          </ol>
+
+        </section>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Internship</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+                <h4 class="h4 timeline-item-title">Visiting student at King Abdullah University of Science and Technology (KAUST)</h4>
+
+              <span>2023.09 — 2023.12</span>
+
+              <p class="timeline-text">
+               I was a research internship offer at a Secure Next Generation Resilient Systems Lab of KAUST,
+                  and will start working with Prof. Konstantinou
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Art director</h4>
+
+              <span>2013 — 2015</span>
+
+              <p class="timeline-text">
+                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
+                quas molestias
+                exceptur.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Web designer</h4>
+
+              <span>2010 — 2013</span>
+
+              <p class="timeline-text">
+                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
+                quas molestias
+                exceptur.
+              </p>
+
+            </li>
+
+          </ol>
+
+        </section>
+
+        <section class="skill">
+
+          <h3 class="h3 skills-title">My skills</h3>
+
+          <ul class="skills-list content-card">
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Web design</h5>
+                <data value="80">80%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Graphic design</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Branding</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">WordPress</h5>
+                <data value="50">50%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%;"></div>
+              </div>
+
             </li>
 
           </ul>
