--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Ruxiao Chen">Ruxiao Chen</h1>
 
-          <p class="title">Master's Student'</p>
+          <p class="title">Master's Student</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -596,67 +596,67 @@
 
         </section>
 
-        <section class="skill">
+<!--        <section class="skill">-->
 
-          <h3 class="h3 skills-title">My skills</h3>
+<!--          <h3 class="h3 skills-title">My skills</h3>-->
 
-          <ul class="skills-list content-card">
+<!--          <ul class="skills-list content-card">-->
 
-            <li class="skills-item">
+<!--            <li class="skills-item">-->
 
-              <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
+<!--              <div class="title-wrapper">-->
+<!--                <h5 class="h5">Web design</h5>-->
+<!--                <data value="80">80%</data>-->
+<!--              </div>-->
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
+<!--              <div class="skill-progress-bg">-->
+<!--                <div class="skill-progress-fill" style="width: 80%;"></div>-->
+<!--              </div>-->
 
-            </li>
+<!--            </li>-->
 
-            <li class="skills-item">
+<!--            <li class="skills-item">-->
 
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
+<!--              <div class="title-wrapper">-->
+<!--                <h5 class="h5">Graphic design</h5>-->
+<!--                <data value="70">70%</data>-->
+<!--              </div>-->
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
+<!--              <div class="skill-progress-bg">-->
+<!--                <div class="skill-progress-fill" style="width: 70%;"></div>-->
+<!--              </div>-->
 
-            </li>
+<!--            </li>-->
 
-            <li class="skills-item">
+<!--            <li class="skills-item">-->
 
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
+<!--              <div class="title-wrapper">-->
+<!--                <h5 class="h5">Branding</h5>-->
+<!--                <data value="90">90%</data>-->
+<!--              </div>-->
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
+<!--              <div class="skill-progress-bg">-->
+<!--                <div class="skill-progress-fill" style="width: 90%;"></div>-->
+<!--              </div>-->
 
-            </li>
+<!--            </li>-->
 
-            <li class="skills-item">
+<!--            <li class="skills-item">-->
 
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
-              </div>
+<!--              <div class="title-wrapper">-->
+<!--                <h5 class="h5">WordPress</h5>-->
+<!--                <data value="50">50%</data>-->
+<!--              </div>-->
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
+<!--              <div class="skill-progress-bg">-->
+<!--                <div class="skill-progress-fill" style="width: 50%;"></div>-->
+<!--              </div>-->
 
-            </li>
+<!--            </li>-->
 
-          </ul>
+<!--          </ul>-->
 
-        </section>
+<!--        </section>-->
 
       </article>
 
@@ -670,43 +670,7 @@
         <header>
           <h2 class="h2 article-title">Publication</h2>
         </header>
-        <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Papers</title>
-    <style>
-        .paper {
-            margin-bottom: 20px;
-        }
-        .title {
-            font-weight: bold;
-        }
-        .details {
-            margin-left: 20px;
-        }
-    </style>
-</head>
-<body>
-    <div class="paper">
-        <p class="title">“Look-Ahead Task Offloading for Multi-User Mobile Augmented Reality in Edge-Cloud Computing” | May. 2023</p>
-        <div class="details">
-            <p>This manuscript (NETWORK-22-00593) has been accepted by IEEE Network (IF: 10.65)</p>
-            <p>Author List: Ruxiao Chen, Shuaishuai Guo</p>
-            <p>Paper Link: <a href="https://ieeexplore.ieee.org/abstract/document/10293197">https://ieeexplore.ieee.org/abstract/document/10293197</a></p>
-        </div>
-    </div>
-    <div class="paper">
-        <p class="title">“Emergent Semantic Communications for Mobile Augmented Reality: Basic Ideas and Opportunities” | Aug. 2023</p>
-        <div class="details">
-            <p>This manuscript is under review by the IEEE Communication magazine</p>
-            <p>Author List: Ruxiao Chen, Shuaishuai Guo</p>
-            <p>Preprint Link: <a href="https://arxiv.org/abs/2308.07342v1">https://arxiv.org/abs/2308.07342v1</a></p>
-        </div>
-    </div>
-</body>
-</html>
+
 
 
 
