--- a/index.html
+++ b/index.html
@@ -607,25 +607,8 @@
       <article class="Publication" data-page="Publication">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Publication</h2>
         </header>
-
-            <div class="paper">
-        <p class="title">“Look-Ahead Task Offloading for Multi-User Mobile Augmented Reality in Edge-Cloud Computing” | May. 2023</p>
-        <div class="details">
-            <p>This manuscript (NETWORK-22-00593) has been accepted by IEEE Network (IF: 10.65)</p>
-            <p>Author List: Ruxiao Chen, Shuaishuai Guo</p>
-            <p>Paper Link: <a href="https://ieeexplore.ieee.org/abstract/document/10293197">https://ieeexplore.ieee.org/abstract/document/10293197</a></p>
-        </div>
-    </div>
-    <div class="paper">
-        <p class="title">“Emergent Semantic Communications for Mobile Augmented Reality: Basic Ideas and Opportunities” | Aug. 2023</p>
-        <div class="details">
-            <p>This manuscript is under review by the IEEE Communication magazine</p>
-            <p>Author List: Ruxiao Chen, Shuaishuai Guo</p>
-            <p>Preprint Link: <a href="https://arxiv.org/abs/2308.07342v1">https://arxiv.org/abs/2308.07342v1</a></p>
-        </div>
-    </div>
 
       </article>
 
