--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>Publication</button>
           </li>
 
           <li class="navbar-item">
@@ -192,8 +192,6 @@
         </ul>
 
       </nav>
-
-
 
 
       <!--
