--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="Publication" data-page="Publication">
 
         <header>
           <h2 class="h2 article-title">Publication</h2>
