--- a/index.html
+++ b/index.html
@@ -602,10 +602,10 @@
         - #PORTFOLIO
       -->
 
-      <article class="Publication" data-page="Publication">
+      <article class="portfolio" data-page="portfolio">
 
         <header>
-          <h2 class="h2 article-title">Publication</h2>
+          <h2 class="h2 article-title">Portfolio</h2>
         </header>
 
         <section class="projects">
