--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>portfolio</button>
+            <button class="navbar-link" data-nav-link>publication</button>
           </li>
 
           <li class="navbar-item">
@@ -602,10 +602,10 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="publication" data-page="publication">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Publication</h2>
         </header>
 
         <section class="projects">
