--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>publication</button>
+            <button class="navbar-link" data-nav-link>Publication</button>
           </li>
 
           <li class="navbar-item">
@@ -607,14 +607,6 @@
         <header>
           <h2 class="h2 article-title">Publication</h2>
         </header>
-
-        <section class="publication-text">
-            <p>
-             I'm seeking a PhD degree in the area of Electrical and Computer Engineering.
-             For a long-term goal, I aim to become involved in innovative work in academia or engage in a professional
-             job related to electronic engineering in industry after graduation.
-            </p>
-
 
       </article>
 
