--- a/index.html
+++ b/index.html
@@ -607,6 +607,17 @@
         <header>
           <h2 class="h2 article-title">Publication</h2>
         </header>
+        <section class="about-text">
+            <p>
+             I'm seeking a PhD degree in the area of Electrical and Computer Engineering.
+             For a long-term goal, I aim to become involved in innovative work in academia or engage in a professional
+             job related to electronic engineering in industry after graduation.
+            </p>
+
+          <p>
+
+          </p>
+        </section>
         <section class="projects">
 
           <ul class="filter-list">
