--- a/index.html
+++ b/index.html
@@ -609,15 +609,19 @@
         </header>
         <section class="about-text">
             <p>
-             I'm seeking a PhD degree in the area of Electrical and Computer Engineering.
-             For a long-term goal, I aim to become involved in innovative work in academia or engage in a professional
-             job related to electronic engineering in industry after graduation.
+             Look-Ahead Task Offloading for Multi-User Mobile Augmented Reality in Edge-Cloud Computing
+            </p>
+            <p>
+             Authors: Ruxiao Chen, Shuaishuai Guo
+            </p>
+            <p>
+             paper link: https://ieeexplore.ieee.org/abstract/document/10293197
             </p>
         </section>
 
+
+
         <section class="projects">
-
-
 
           <div class="filter-select-box">
 
@@ -655,6 +659,9 @@
 
 
         </section>
+
+
+
       </article>
 
 
