--- a/index.html
+++ b/index.html
@@ -609,12 +609,8 @@
         </header>
         <section class="about-text">
             <p>
-             Look-Ahead Task Offloading for Multi-User Mobile Augmented Reality in Edge-Cloud Computing
-            </p>
-            <p>
-             Authors: Ruxiao Chen, Shuaishuai Guo
-            </p>
-            <p>
+             Look-Ahead Task Offloading for Multi-User Mobile Augmented Reality in Edge-Cloud Computing <br />
+             Authors: Ruxiao Chen, Shuaishuai Guo<br />
              paper link: https://ieeexplore.ieee.org/abstract/document/10293197
             </p>
         </section>
