--- a/index.html
+++ b/index.html
@@ -609,9 +609,9 @@
         </header>
         <section class="about-text">
             <p>
-             Look-Ahead Task Offloading for Multi-User Mobile Augmented Reality in Edge-Cloud Computing <br />
+             <strong>Look-Ahead Task Offloading for Multi-User Mobile Augmented Reality in Edge-Cloud Computing </strong> <br />
              Authors: Ruxiao Chen, Shuaishuai Guo<br />
-             paper link: https://ieeexplore.ieee.org/abstract/document/10293197
+             Paper link: https://ieeexplore.ieee.org/abstract/document/10293197
             </p>
         </section>
 
