--- a/index.html
+++ b/index.html
@@ -609,9 +609,18 @@
         </header>
         <section class="about-text">
             <p>
-             <strong>Look-Ahead Task Offloading for Multi-User Mobile Augmented Reality in Edge-Cloud Computing </strong> <br />
-             Authors: Ruxiao Chen, Shuaishuai Guo<br />
-             Paper link: https://ieeexplore.ieee.org/abstract/document/10293197
+              <a href="https://ieeexplore.ieee.org/abstract/document/10293197"><strong>Look-Ahead Task Offloading
+                for Multi-User Mobile Augmented Reality in Edge-Cloud Computing </strong> </a><br />
+              <i>Authors: Ruxiao Chen, Shuaishuai Guo</i><br />
+              Published in <strong>IEEE Network Magzine</strong>
+            </p>
+        </section>
+
+        <section class="about-text">
+            <p>
+              <a href="https://arxiv.org/abs/2308.07342"><strong>Emergent Semantic Communications for Mobile
+ Augmented Reality: Basic Ideas and Opportunities </strong> </a><br />
+              <i>Authors: Ruxiao Chen, Shuaishuai Guo</i><br />
             </p>
         </section>
 
