--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
         <section class="about-text">
             <p>
               <a href="https://ieeexplore.ieee.org/abstract/document/10293197"><strong>Look-Ahead Task Offloading
-                for Multi-User Mobile Augmented Reality in Edge-Cloud Computing </strong> </a><br />
+                for Multi-User Mobile Augmented Reality in Edge-Cloud Computing </strong> </a>
               <i>Authors: Ruxiao Chen, Shuaishuai Guo</i><br />
               Published in <strong>IEEE Network Magzine</strong>
             </p>
