--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
         </header>
         <section class="about-text">
             <p>
-              <a href="https://ieeexplore.ieee.org/abstract/document/10293197"><strong>Look-Ahead Task Offloading
+              <a href="https://ieeexplore.ieee.org/abstract/document/10293197" style="color: white;> <strong>Look-Ahead Task Offloading
                 for Multi-User Mobile Augmented Reality in Edge-Cloud Computing </strong> </a>
               <i>Authors: Ruxiao Chen, Shuaishuai Guo</i><br />
               Published in <strong>IEEE Network Magzine</strong>
@@ -619,7 +619,7 @@
         <section class="about-text">
             <p>
               <a href="https://arxiv.org/abs/2308.07342"><strong>Emergent Semantic Communications for Mobile
- Augmented Reality: Basic Ideas and Opportunities </strong> </a><br />
+               Augmented Reality: Basic Ideas and Opportunities </strong> </a>
               <i>Authors: Ruxiao Chen, Shuaishuai Guo</i><br />
             </p>
         </section>
