--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
         </header>
         <section class="about-text">
             <p>
-              <a href="https://ieeexplore.ieee.org/abstract/document/10293197" style="color: white;> <strong>Look-Ahead Task Offloading
+              <a href="https://ieeexplore.ieee.org/abstract/document/10293197" class="link-color"> <strong>Look-Ahead Task Offloading
                 for Multi-User Mobile Augmented Reality in Edge-Cloud Computing </strong> </a>
               <i>Authors: Ruxiao Chen, Shuaishuai Guo</i><br />
               Published in <strong>IEEE Network Magzine</strong>
