--- a/index.html
+++ b/index.html
@@ -152,9 +152,6 @@
     </aside>
 
 
-
-
-
     <!--
       - #main-content
     -->
@@ -618,7 +615,7 @@
 
         <section class="about-text">
             <p>
-              <a href="https://arxiv.org/abs/2308.07342"><strong>Emergent Semantic Communications for Mobile
+              <a href="https://arxiv.org/abs/2308.07342" class="link-color"> <strong>Emergent Semantic Communications for Mobile
                Augmented Reality: Basic Ideas and Opportunities </strong> </a>
               <i>Authors: Ruxiao Chen, Shuaishuai Guo</i><br />
             </p>
