--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">Research Interests</h3>
 
           <ul class="service-list">
 
@@ -232,10 +232,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">AI in Edge Computing Systems</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Applying AI method in edge comupting to improve its performances in systems like mobile AR/VR and autonomus vehicles.
                 </p>
               </div>
 
@@ -248,46 +248,17 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Semantic Communication</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Data-level communication focues on transmiting the original symbols of data, and has gradually reached its physical constraints.
+                  Semantic communication, on the other hand, emphasizes on the transmission
+                  of data's underlying essence and concepts.
                 </p>
               </div>
 
             </li>
 
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
-
-                <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
-
-                <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
-                </p>
-              </div>
-
-            </li>
 
           </ul>
 
