--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Blog</button>
+            <button class="navbar-link" data-nav-link>Project</button>
           </li>
 
           <li class="navbar-item">
@@ -508,10 +508,10 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="blog">
+      <article class="project" data-page="project">
 
         <header>
-          <h2 class="h2 article-title">Blog</h2>
+          <h2 class="h2 article-title">Project</h2>
         </header>
 
         <section class="blog-posts">
