--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                 <div class="blog-content">
 
                   <div class="blog-meta">
-                    <p class="blog-category">Ppaer</p>
+                    <p class="blog-category">Paper</p>
 
                     <span class="dot"></span>
 
