--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
               <ion-icon name="mail-outline"></ion-icon>
             </div>
 
-            <div class="contact-info">
+            <div class="contact-info" >
               <p class="contact-title">Personal Email</p>
 
-              <a href="#" class="contact-link">ruxiaochen333@gmail.com</a>
+              <a href="mailto:ruxiaochen333@gmail.com" class="contact-link" >ruxiaochen333@ <br />
+                gmail.com</a>
             </div>
 
           </li>
@@ -128,29 +129,29 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://github.com/RuxiaoChen/Ruxiao-Chen/blob/master/README.md" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+            <a href="https://github.com/RuxiaoChen/Ruxiao-Chen/blob/master/README.md" class="social-link">
+              <ion-icon name="logo-wechat"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://github.com/RuxiaoChen/Ruxiao-Chen/blob/master/README.md" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
+
 
         </ul>
 
       </div>
 
     </aside>
-
 
     <!--
       - #main-content
@@ -561,7 +562,7 @@
                 <div class="blog-content">
 
                   <div class="blog-meta">
-                    <p class="blog-category">Design</p>
+                    <p class="blog-category">Patent</p>
 
                     <span class="dot"></span>
 
