--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Project</button>
           </li>
-          
+
         </ul>
 
       </nav>
@@ -389,7 +389,7 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Internship</h3>
+            <h3 class="h3">Research Internship</h3>
           </div>
 
           <ol class="timeline-list">
@@ -401,8 +401,8 @@
               <span>2023.09 — 2023.12</span>
 
               <p class="timeline-text">
-               I was a research internship offer at Secure Next Generation Resilient Systems Lab of KAUST,
-                  and work with Prof. Konstantinou.
+               I was a research intern at Secure Next Generation Resilient Systems Lab of KAUST,
+                   with <a href="https://cemse.kaust.edu.sa/sentry/people/person/charalambos-konstantinou" class="link-color"> <strong>Professor Charalambos Konstantinou. </strong> </a>
               </p>
 
             </li>
@@ -414,8 +414,21 @@
               <span>2024.04 — 2024.08</span>
 
               <p class="timeline-text">
-                I was a research internship offer at immersive design group of SUSTec,
-                  and work with Professor Seungwoo Je.
+                I was a research intern at immersive design group of SUSTec,
+                  and work with <a href="http://immersivedesignresearch.com/seungwoo" class="link-color"> <strong>Professor Seungwoo Je.</strong> </a>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Research Assistant at Smart System Group of Shandong University</h4>
+
+              <span>2024.04 — 2024.08</span>
+
+              <p class="timeline-text">
+                I was a research assistant at Smart System Group of Shandong University,
+                  and work with <a href="https://scholar.google.com/citations?user=D_kCy_QAAAAJ&sortby=pubdate" class="link-color"><strong>Professor Shuaishuai Guo.</strong></a>
               </p>
 
             </li>
