--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
           <li class="social-item">
             <a href="https://github.com/RuxiaoChen/Ruxiao-Chen/blob/master/README.md" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
