--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
               <h4 class="h4 timeline-item-title">Research Assistant at Smart System Group of Shandong University</h4>
 
-              <span>2024.04 — 2024.08</span>
+              <span>2022.07 — present</span>
 
               <p class="timeline-text">
                 I was a research assistant at Smart System Group of Shandong University,
