--- a/index.html
+++ b/index.html
@@ -461,10 +461,9 @@
 
         <section class="about-text">
             <p>
-              <a href="https://arxiv.org/abs/2308.07342" class="link-color"> <strong>Emergent Semantic Communications for Mobile
-               Augmented Reality: Basic Ideas and Opportunities </strong> </a>
+              <a href="https://ieeexplore.ieee.org/document/10693688" class="link-color"> <strong>Referential Task-Oriented Emergent Semantic Communications for Mobile Augmented Reality</strong> </a>
               <i>Authors: Ruxiao Chen, Shuaishuai Guo</i><br />
-              Under reviewed by <strong>IEEE Communication</strong>
+              Published in <strong>2024 IEEE/CIC International Conference on Communications in China (ICCC Workshops)</strong>
             </p>
         </section>
 
