--- a/index.html
+++ b/index.html
@@ -245,12 +245,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Semantic Communication</h4>
+                <h4 class="h4 service-item-title">LLM AI Agents</h4>
 
                 <p class="service-item-text">
-                  Data-level communication focues on transmiting the original symbols of data, and has gradually reached its physical constraints.
-                  Semantic communication, on the other hand, emphasizes on the transmission
-                  of data's underlying essence and concepts.
+                  AI agents in large language models (LLMs) are autonomous systems that leverage LLMs to perform specific tasks, such as answering questions, generating content, or analyzing data. They interact with users or other systems by processing input and producing outputs based on pre-trained knowledge and algorithms. 
                 </p>
               </div>
 
