--- a/index.html
+++ b/index.html
@@ -465,6 +465,30 @@
             </p>
         </section>
 
+        <section class="about-text">
+            <p>
+              <a href="https://openreview.net/forum?id=MHbz86z3h5" class="link-color"> <strong>Agent in the Sky: Intelligent Multi-Agent Framework for Autonomous HAPS Coordination and Real-World Event Adaptation</strong> </a>
+              <i>Authors: Dezheng Han, Anbang Zhang, Ruxiao Chen, Chenyuan Feng, Shuaishuai Guo</i><br />
+              Published in <strong>AAAI 2025 Workshop on Artificial Intelligence for Wireless Communications and Networking (AI4WCN)</strong>
+            </p>
+        </section>
+
+        <section class="about-text">
+            <p>
+              <a href="https://openreview.net/forum?id=lDqqTOFV2X" class="link-color"> <strong>Few-Shot Adaptive Learning for Robust Task-Oriented Semantic Communication</strong> </a>
+              <i>Authors: Wenjie Han, Anbang Zhang, Chenyuan Feng, Ruxiao Chen, Shuang Zhang, Shuaishuai Guo</i><br />
+              Published in <strong>AAAI 2025 Workshop on Artificial Intelligence for Wireless Communications and Networking (AI4WCN)</strong>
+            </p>
+        </section>
+
+        <section class="about-text">
+            <p>
+              <a href="https://www.dropbox.com/scl/fi/rxi56br8pnke20igybkzb/Thermoshift.pdf?rlkey=r82n6undxhbtks3vv1odz7hmu&st=ugczqoo0&dl=0" class="link-color"> <strong>ThermoShift: Enhancing VR Immersion with Thermal Motion Simulation</strong> </a>
+              <i>Authors: Ke Ding, Ruxiao Chen, Zezheng Guan, SeungWoo Je</i><br />
+              Published in <strong>Chinese CHI 2024</strong>
+            </p>
+        </section>
+
 
 
         <section class="projects">
