--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">AI in Edge Computing Systems</h4>
+                <h4 class="h4 service-item-title">AI in Edge Computing and Wireless Communication Systems</h4>
 
                 <p class="service-item-text">
                   Applying AI method in edge comupting to improve its performances in systems like mobile AR/VR and autonomus vehicles.
