--- a/index.html
+++ b/index.html
@@ -459,6 +459,14 @@
 
         <section class="about-text">
             <p>
+              <a href="https://arxiv.org/abs/2502.17701#:~:text=In%20this%20work%2C%20for%20the%20first%20time%2C%20we,to%20streamline%20the%20Chain-of-Thought%20%28CoT%29%20reasoning%20and%20su" class="link-color"> <strong>From Perceptions to Decisions: Wildfire Evacuation Decision Prediction with Behavioral Theory-informed LLMs</strong> </a>
+              <i>Authors: Ruxiao Chen, Chenguang Wang, Yuran Sun, Xilei Zhao, Susu Xu</i><br />
+              Published in <strong>Under review by ACL 2025</strong>
+            </p>
+        </section>
+
+        <section class="about-text">
+            <p>
               <a href="https://ieeexplore.ieee.org/document/10693688" class="link-color"> <strong>Referential Task-Oriented Emergent Semantic Communications for Mobile Augmented Reality</strong> </a>
               <i>Authors: Ruxiao Chen, Shuaishuai Guo</i><br />
               Published in <strong>2024 IEEE/CIC International Conference on Communications in China (ICCC Workshops)</strong>
