--- a/index.html
+++ b/index.html
@@ -394,6 +394,19 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Research Assistant in Johns Hopkins University</h4>
+
+              <span>2024.09 — present</span>
+
+              <p class="timeline-text">
+                I was a research assistant at Johns Hopkins University,
+                  and work with <a href="https://engineering.jhu.edu/faculty/susu-xu/" class="link-color"><strong>Professor Susu Xu.</strong></a>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
                 <h4 class="h4 timeline-item-title">Visiting student at King Abdullah University of Science and Technology (KAUST), Saudi Arabia</h4>
 
               <span>2023.09 — 2023.12</span>
@@ -418,18 +431,7 @@
 
             </li>
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Research Assistant at Smart System Group of Shandong University</h4>
-
-              <span>2022.07 — present</span>
-
-              <p class="timeline-text">
-                I was a research assistant at Smart System Group of Shandong University,
-                  and work with <a href="https://scholar.google.com/citations?user=D_kCy_QAAAAJ&sortby=pubdate" class="link-color"><strong>Professor Shuaishuai Guo.</strong></a>
-              </p>
-
-            </li>
+            
 
           </ol>
 
