--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             <p>
               <a href="https://arxiv.org/abs/2502.17701#:~:text=In%20this%20work%2C%20for%20the%20first%20time%2C%20we,to%20streamline%20the%20Chain-of-Thought%20%28CoT%29%20reasoning%20and%20su" class="link-color"> <strong>From Perceptions to Decisions: Wildfire Evacuation Decision Prediction with Behavioral Theory-informed LLMs</strong> </a>
               <i>Authors: Ruxiao Chen, Chenguang Wang, Yuran Sun, Xilei Zhao, Susu Xu</i><br />
-              <strong>Under review by ACL 2025</strong>
+              <strong>Accepted by ACL 2025 Main Conference</strong>
             </p>
         </section>
 
