--- a/index.html
+++ b/index.html
@@ -199,11 +199,10 @@
         </header>
 
         <section class="about-text">
-            <p>
-             I'm a Master's student at Jonhs Hopkins University, majoring in Systems Engineering.
-             For a long-term goal, I aim to become involved in innovative work in academia or engage in a professional
-             job related to computer engineering in industry after graduation.
-            </p>
+          <p>
+           I am a PhD student in Systems Engineering at Johns Hopkins University, starting in Fall 2025. My supervisor is <a href="http://susu-xu.com/" target="_blank">Susu Xu</a>.  
+           My long-term goal is to pursue innovative research in academia or contribute to computer engineering in industry after graduation.
+          </p>
 
           <p>
 
@@ -228,10 +227,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">AI in Edge Computing and Wireless Communication Systems</h4>
+                <h4 class="h4 service-item-title">LLM+Psychological theory</h4>
 
                 <p class="service-item-text">
-                  Applying AI method in edge comupting to improve its performances in systems like mobile AR/VR and autonomus vehicles.
+                  Incorporating LLM with well-defined behavioral/psychological theory to predict the behaviors of human.
                 </p>
               </div>
 
@@ -244,10 +243,9 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">LLM AI Agents</h4>
+                <h4 class="h4 service-item-title">LLM AI Agents Communications</h4>
 
                 <p class="service-item-text">
-                  AI agents in large language models (LLMs) are autonomous systems that leverage LLMs to perform specific tasks, such as answering questions, generating content, or analyzing data. They interact with users or other systems by processing input and producing outputs based on pre-trained knowledge and algorithms. 
                 </p>
               </div>
 
