--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
         <section class="about-text">
           <p>
-           I am a PhD student in Systems Engineering at Johns Hopkins University, starting in Fall 2025. My supervisor is <a href="http://susu-xu.com/" target="_blank">Susu Xu</a>.  
+           I am a PhD student in Systems Engineering at Johns Hopkins University, starting in Fall 2025. My supervisor is <a href="http://susu-xu.com/" target="_blank" style="color: white;">Susu Xu</a>.  
            My long-term goal is to pursue innovative research in academia or contribute to computer engineering in industry after graduation.
           </p>
 
