--- a/index.html
+++ b/index.html
@@ -199,10 +199,11 @@
         </header>
 
         <section class="about-text">
-        <p>I am a PhD student in Systems Engineering at Johns Hopkins University, starting in Fall 2025.</p>
-        <p>My supervisor is <a href="http://susu-xu.com/" target="_blank" style="color: white;">Susu Xu</a>.</p>
-        <p>My long-term goal is to pursue innovative research in academia or contribute to computer engineering in industry after graduation.</p>
-
+        <p>
+         I am a PhD student in Systems Engineering at Johns Hopkins University, starting in Fall 2025.<br>
+         My supervisor is <a href="http://susu-xu.com/" target="_blank" style="color: white;">Susu Xu.</a>
+         My long-term goal is to pursue innovative research in academia or contribute to computer engineering in industry after graduation.
+        </p>
 
           <p>
 
