--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <section class="about-text">
         <p>
          I am a PhD student in Systems Engineering at Johns Hopkins University, starting in Fall 2025.<br>
-         My supervisor is <a href="http://susu-xu.com/" target="_blank" style="color: white;">Susu Xu.</a>
+         My supervisor is <a href="http://susu-xu.com/" target="_blank" style="color: white;">Susu Xu.</a><br>
          My long-term goal is to pursue innovative research in academia or contribute to computer engineering in industry after graduation.
         </p>
 
